test/driver/parser_error_retcode.dmz
// RUN: dmz %s -run 2>&1 | filecheck %s
parser error
// CHECK: error: expected declaration